[package]
name = "rebalancer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rebalancer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
client = []
solana=[]
anchor-debug=[]
test-sbf=[]
devnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["mint", "spl-token", "token", "metadata"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
uint = "0.10.0"